--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==3.4
 magic-filter==1.0.9
 multidict==6.0.4
 outcome==1.2.0
+psycopg2-binary==2.9.4
 PySocks==1.7.1
 python-dotenv==1.0.0
 pytz==2023.3
